src/test/test-models/bad/for_loops/assign_to_loop_var7.stan
transformed data {
  matrix[2, 2] vs;
  for (v in vs) {
    v[1] = 3.2;
  }
}
